add use ui to view personal projects, add component to view individual projects, add routing for personal project children, add model for personal projects

--- a/src/modules/core/nav/navbar.css
+++ b/src/modules/core/nav/navbar.css
@@ -21,8 +21,10 @@ nav{
 	/*border-radius: 50%;*/
 	display: inline-flex;
 }
-a{
+.navTitle, a{
 	color: black;
 	text-decoration: none;
+}
+.navTitle{
 	text-transform: uppercase;
 }
