--- a/src/modules/homepage/components/homepage.css
+++ b/src/modules/homepage/components/homepage.css
@@ -1,15 +1,26 @@
 .mainContainer{	
 	display: grid;
 	grid-template-columns: 2fr 2fr;
-	height: 89svh;
 	place-content:end;
 	animation: fadeAnimation 2.5s;
-	/*background: url('/src/assets/background_picture.png');
+	/* background: url('/src/assets/background_picture.png');
 	background-position: center;  Center the image 
 	background-repeat: no-repeat;  Do not repeat the image
 	background-size: cover; */
 }
+.carouselImage{
+	width: 100%;
+	margin:auto;
+	max-width: 600px;
+	max-height: 300px;
+}
+.carouselHolder{
+	width: 100%;
+	max-width: 600px;
+	padding: 12px;
+	margin: auto;
 
+}
 .elements{
 	background-image: linear-gradient(to bottom, rgba(255,0,0,0),rgba(120,120,120,1));
 	padding: 0 15%;
