--- a/src/modules/homepage/components/homepage.css
+++ b/src/modules/homepage/components/homepage.css
@@ -1,7 +1,9 @@
 .mainContainer{	
 	display: grid;
 	grid-template-columns: 2fr 2fr;
-	place-content:end;
+	max-width: 600px;
+	margin: auto;
+	/* place-content:end; */
 	animation: fadeAnimation 2.5s;
 	/* background: url('/src/assets/background_picture.png');
 	background-position: center;  Center the image 
@@ -22,19 +24,23 @@
 
 }
 .elements{
-	background-image: linear-gradient(to bottom, rgba(255,0,0,0),rgba(120,120,120,1));
-	padding: 0 15%;
+	/* background-image: linear-gradient(to bottom, rgba(255,0,0,0),rgba(120,120,120,1));
+	padding: 0 15%; */
+	background-color: white;
+	padding: 12px;
+	border-radius: 12px;
+	margin: 0 5px;
 	animation: fadeAnimation 2.5s ease-in;
 }
 .project{
 	display: inline-block;
 	margin: 5px;
-	border: 2.5px solid white;
-	color:white;
+	border: 2.5px solid blue;
+	color: blue;
 	border-radius: 12px;
 	padding: 5px 10px;
 }
 .latest_video{
 	border-radius: 12px;
-	width:50%;
+	width:100%;
 }
