make nav mobile responsive by implementing a mobile nac, fix styling for about and project to accommodate mobile screens, new hamburger icon

--- a/src/modules/core/nav/navbar.css
+++ b/src/modules/core/nav/navbar.css
@@ -28,3 +28,16 @@ nav{
 .navTitle{
 	text-transform: uppercase;
 }
+.mobileNav{
+	display:none;
+}
+
+
+@media (max-width: 810px) {
+	.mobileNav{
+		display: block;
+	}
+	.desktopNav{
+		display: none;
+	}
+}
