--- a/src/modules/projects/components/projectView.css
+++ b/src/modules/projects/components/projectView.css
@@ -7,3 +7,28 @@
 	width: 100%;
 	height:100svh;
 }
+.x{
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	margin: 10px;
+	border-radius: 10px;
+	padding: 10px;
+	background-color: rgba(240, 244, 249, 1);
+	z-index: 99;
+}
+.projectVideoContainer{
+	margin: auto;
+	padding: 10px;
+	width: 100%;
+	max-width: 900px;
+	background-color: white;
+	display: grid;
+	grid-template-columns: 2fr 2fr;
+	border-radius: 12px;
+}
+@media (max-width: 810px) {
+	.projectVideoContainer{
+		display: block;
+	}
+}
