--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{
 	margin: 0;
 	background-color: rgba(240, 244, 249, 1);
-	font-family: 'roboto', 'system-ui';
+	font-family: 'Roboto', 'system-ui';
+}
+.sdescription{
+	padding: 0 5px;         
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    -webkit-line-clamp: 3; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .active{
 	background-color: rgba(194,231,255);
