--- a/src/modules/about/components/aboutMain.css
+++ b/src/modules/about/components/aboutMain.css
@@ -1,21 +1,23 @@
 .splitTwo{
 	display: grid;
-	grid-template-columns: 2fr 1fr;
+	grid-template-columns: 1fr 2fr;
+	border-top: 1.5px solid black;
 }
 .aboutContainer{
-	max-height: 80svh;
+	/*max-height: 80svh;*/
 	height: 100svh;
 	padding: 12px;
 	background-color: white;
 	border-radius: 12px;
-	overflow: auto;
+	/*overflow: auto;*/
 }
 .aboutHeroContainer{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 }
 .aboutHero{
-	background-color: rgba(240, 244, 249, 1);
+	/*background-color: rgba(240, 244, 249, 1);*/
+	border: 1.5px solid black;
 	border-radius: 12px;
 	padding: 12px;
 	margin: 10px 5px;
