--- a/src/modules/core/nav/navbar.css
+++ b/src/modules/core/nav/navbar.css
@@ -5,8 +5,9 @@ nav{
 	padding: 10px 0;
 }
 .navContainer{
-	background-color: white;
-	box-shadow: 0 1px 2px 0 black;
+	/*background-color: white;
+	box-shadow: 0 1px 2px 0 black;*/
+	border: 1.5px solid black;
 	border-radius: 6px;
 	padding: 15px 0px;
 	display: inline-flex;
