--- a/src/modules/projects/components/projectsAll.css
+++ b/src/modules/projects/components/projectsAll.css
@@ -1,12 +1,14 @@
 .projectContainer{
-	/* box-shadow: 0 0 2px 0px black; */
+	/* box-shadow: 0 0 2px 0px black;
+	border-radius: 24px; */
 	padding: 12px;
 	max-width: 800px;
 	margin: 10px auto;
-	border-radius: 24px;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	background-color: rgba(240, 244, 249, 1);
+	border-bottom: 1.5px solid black
+	/*background-color: rgba(240, 244, 249, 1);
+	background-color: rgba(174,175,170,1);*/
 }
 .logoImages{
 	width: 100%;
