--- a/src/modules/projects/components/projectView.css
+++ b/src/modules/projects/components/projectView.css
@@ -8,24 +8,41 @@
 	height:100svh;
 }
 .x{
-	position: absolute;
-	right: 2px;
-	top: 2px;
-	margin: 10px;
-	border-radius: 10px;
 	padding: 10px;
-	background-color: rgba(240, 244, 249, 1);
-	z-index: 99;
+	color: rgba(240, 244, 249, 1);
+	width: 100%;
+	max-width: 900px;
+	font-weight: 900;
+	font-size: larger;
+	margin: auto;
 }
 .projectVideoContainer{
 	margin: auto;
+	max-height: 90svh;
+	/*height: 100svh;*/
+	overflow: scroll;
 	padding: 10px;
 	width: 100%;
 	max-width: 900px;
 	background-color: white;
+	/*
 	display: grid;
 	grid-template-columns: 2fr 2fr;
+	*/
 	border-radius: 12px;
+}
+.dateContainer{
+	padding: 5px 10px;
+	margin: 0;
+	display: inline-block;
+	background-color: black;
+	color: white;
+	border-radius: 12px;
+}
+.timelineBody{
+	width: 10px;
+	background-color: black;
+	margin-left: 20px;
 }
 @media (max-width: 810px) {
 	.projectVideoContainer{
