--- a/src/modules/projects/components/projectsAll.css
+++ b/src/modules/projects/components/projectsAll.css
@@ -6,9 +6,18 @@
 	margin: 10px auto;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	border-bottom: 1.5px solid black
-	/*background-color: rgba(240, 244, 249, 1);
+	/*border-bottom: 1.5px solid black
+	background-color: rgba(240, 244, 249, 1);
 	background-color: rgba(174,175,170,1);*/
+}
+.projectContainer:hover{
+	background-color: white;
+	background: #005aa7; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #432371, #faae7b); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #432371, #faae7b);
+	padding: 12px;
+	border-radius: 12px;
+	cursor: none;
 }
 .logoImages{
 	width: 100%;
