--- a/src/modules/projects/components/projectsMain.css
+++ b/src/modules/projects/components/projectsMain.css
@@ -8,9 +8,14 @@
 	align-items: center;
 }
 .navElement:hover{
-	background-color: rgba(0, 0, 0, 0.05);
+	background-color: white;
+	background: #005aa7; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #432371, #faae7b); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #432371, #faae7b);
 	padding: 12px;
 	border-radius: 12px;
+	border: 0px;
+	cursor: none;
 }
 .projects{
 	background-color:white;
