remove border from navbar

--- a/src/modules/core/nav/navbar.css
+++ b/src/modules/core/nav/navbar.css
@@ -6,8 +6,8 @@ nav{
 }
 .navContainer{
 	/*background-color: white;
-	box-shadow: 0 1px 2px 0 black;*/
-	border: 1.5px solid black;
+	box-shadow: 0 1px 2px 0 black;
+	border: 1.5px solid black;*/
 	border-radius: 6px;
 	padding: 5px 0px;
 	display: inline-flex;
@@ -24,6 +24,7 @@ nav{
 }
 .navTitle{
 	text-transform: uppercase;
+	padding: 10px;
 }
 .mobileNav{
 	display:none;
