--- a/src/modules/projects/components/projectView.css
+++ b/src/modules/projects/components/projectView.css
@@ -9,9 +9,9 @@
 }
 .x{
 	padding: 10px;
-	color: rgba(240, 244, 249, 1);
+	/*color: rgba(240, 244, 249, 1);
 	width: 100%;
-	max-width: 900px;
+	max-width: 900px;*/
 	font-weight: 900;
 	font-size: larger;
 	margin: auto;
