add loader formation and amination

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,20 @@ a:hover{
 	color: white;
 	border-radius: 15px;
 }
+
+#loader {
+	border: 5px solid #f3f3f3;
+	border-top: 5px solid #3498db;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	animation: spin 1s linear infinite;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 .navcenter{
 	margin: 5px auto;
 	border-radius: 12px;
@@ -77,4 +91,13 @@ a:hover{
 	 to{
 		letter-spacing: normal;
 	 }
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
