--- a/src/modules/projects/components/projectView.css
+++ b/src/modules/projects/components/projectView.css
@@ -25,6 +25,18 @@
 	border-radius: 12px;
 	cursor: none;
 }
+.iframe-container {
+	position: relative;
+	width: 100%;
+	height: 400px; /* Adjust as needed */
+}
+
+iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+	display: none; /* Hide iframe initially */
+}
 
 .projectVideoContainer{
 	margin: auto;
@@ -59,3 +71,4 @@
 		display: block;
 	}
 }
+
