--- a/src/modules/projects/components/projectView.css
+++ b/src/modules/projects/components/projectView.css
@@ -57,8 +57,7 @@ iframe {
 	padding: 5px 10px;
 	margin: 0;
 	display: inline-block;
-	background-color: black;
-	color: white;
+	border: 2px solid black;
 	border-radius: 12px;
 }
 .timelineBody{
