--- a/src/modules/projects/components/projectsAll.css
+++ b/src/modules/projects/components/projectsAll.css
@@ -1,14 +1,9 @@
 .projectContainer{
-	/* box-shadow: 0 0 2px 0px black;
-	border-radius: 24px; */
 	padding: 12px;
 	max-width: 800px;
 	margin: 10px auto;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	/*border-bottom: 1.5px solid black
-	background-color: rgba(240, 244, 249, 1);
-	background-color: rgba(174,175,170,1);*/
 }
 .projectContainer:hover{
 	background-color: white;
@@ -16,21 +11,26 @@
 	background: -webkit-linear-gradient(to right, #432371, #faae7b); /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #432371, #faae7b);
 	padding: 12px;
-	border-radius: 12px;
 	cursor: none;
+	border-radius: 16px;
+	box-shadow:
+		inset 2px 2px 4px #c1c1c1,   /* inner shadow (top-left) for depth */
+		inset -2px -2px 4px #ffffff, /* inner highlight (bottom-right) for light */
+		8px 8px 16px rgba(0,0,0,0.15), /* drop shadow for lift */
+		-4px -4px 12px rgba(255,255,255,0.7); /* soft outer glow */
+	font-size: 18px;
 }
 .logoImages{
 	width: 100%;
 	max-width:40px;
 	border-radius: 20px;
+	margin: 5px;
 }
 .projectImage{
 	max-width:300px;
 	border-radius: 24px;
-	/*height: 300px;
-	background-position: center; Center the image 
-	background-repeat: no-repeat;  Do not repeat the image
-	background-size: fill; */
+	margin-right: 15px;
+	padding: 5px;
 }
 
 @media (max-width: 810px) {
