--- a/src/modules/projects/components/projectsMain.css
+++ b/src/modules/projects/components/projectsMain.css
@@ -22,7 +22,8 @@
 		8px 8px 16px rgba(0,0,0,0.15), /* drop shadow for lift */
 		-4px -4px 12px rgba(255,255,255,0.7); /* soft outer glow */
 }
-.alert{
+
+.alert1{
 	text-align: center;
 	background-color: red;
 	color: white;
@@ -31,6 +32,7 @@
 	border-radius: 10px;
 	max-width: 900px;
 }
+
 .projects{
 	background-color:white;
 	max-height: 85svh;
