--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,16 @@ a:hover{
 		8px 8px 16px rgba(0,0,0,0.15), /* drop shadow for lift */
 		0px 0px 2px rgba(255,255,255,0.7); /* soft outer glow */
 }
+.contactButton{
+	background: green;
+	color: white;
+	display: flex;
+	width: 90%;
+	margin: auto;
+	border: 0;
+	justify-content: center;
+	border-radius: 6px;
+}
 .active{
 	/*background-color: rgba(194,231,255);
 	padding: 12px;
